Fixed scrollbar issue

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -35,7 +35,7 @@
 
 
 body{
-    
+    padding-left: 0; padding-right: 0;
     font-family: "Arial", serif;
     width: 1000px;
     margin: 0 auto;
